2007-11-05  Scott Reeves <sreeves@novell.com>

	* control-center.schemas.in: remove reference to background.desktop

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* control-center.schemas.in: remove part of the long description for
	cc_actions_list since it was confusig translators (#426229)

2007-08-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnomecc.desktop.in.in: reverted last commit made by mistake.

2007-05-22  Stanislav Brabec  <sbrabec@suse.cz>

	* gnomecc.desktop.in.in: Removed superfluous X-SuSE-translate tag.

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnomecc.desktop.in.in: renamed Bugzilla product.

2007-02-12  Scott Reeves <sreeves@novell.com>

	* control-center.c: Use smaller icons by default,
	partial fix for #405078

2007-01-30  Jens Granseuer  <jensgr@gmx.net>

	* control-center.c: (main): fix typo in usage string (noticed by
	Christian Persch, fixes bug #398361)

2007-01-30  Scott Reeves <sreeves@novell.com>

	* control-center.c: Fix for inconsistent GenericNames- add a flag
	controlling display or not.
	https://bugzilla.novell.com/show_bug.cgi?id=185957

2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>

	* control-center.c: (get_actions_list): ANSIfication
	of function declaration.

2007-01-26  Scott Reeves <sreeves@novell.com>

	* control-center.c: respect the exit_on_close flag

2007-01-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* control-center.schemas.in: added 'Change theme' and 'Set preferred
	applications' to common tasks.

2007-01-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* control-center.schemas.in: added schemas for the new GConf prefix,
	and add common tasks.

	* Makefile.am: install schemas.

2007-01-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* control-center.c: changed GConf prefix to /apps/...
	(handle_static_action_clicked): prevent capplets from being launched
	twice.

2007-01-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* control-center.c (main): program name is gnome-control-center.
