@@ -20,7 +20,7 @@
 			<default>false</default>
 			<locale name="C">
 				<short>Close the control-center when a task is activated</short>
-				<long>if true, the control-center will close when a "Common Task" is activated</long>
+				<long>if true, the control-center will close when a "Common Task" is activated.</long>
 			</locale>
 		</schema>
 		<schema>
@@ -31,7 +31,7 @@
 			<default>false</default>
 			<locale name="C">
 				<short>Exit shell on start action performed</short>
-				<long>Indicates whether to close the shell when a start action is performed</long>
+				<long>Indicates whether to close the shell when a start action is performed.</long>
 			</locale>
 		</schema>
 		<schema>
@@ -42,7 +42,7 @@
 			<default>false</default>
 			<locale name="C">
 				<short>Exit shell on help action performed</short>
-				<long>Indicates whether to close the shell when a help action is performed</long>
+				<long>Indicates whether to close the shell when a help action is performed.</long>
 			</locale>
 		</schema>
 		<schema>
@@ -53,7 +53,7 @@
 			<default>false</default>
 			<locale name="C">
 				<short>Exit shell on add or remove action performed</short>
-				<long>Indicates whether to close the shell when an add or remove action is performed</long>
+				<long>Indicates whether to close the shell when an add or remove action is performed.</long>
 			</locale>
 		</schema>
 		<schema>
@@ -64,7 +64,7 @@
 			<default>false</default>
 			<locale name="C">
 				<short>Exit shell on upgrade or uninstall action performed</short>
-				<long>Indicates whether to close the shell when an upgrade or uninstall action is performed</long>
+				<long>Indicates whether to close the shell when an upgrade or uninstall action is performed.</long>
 			</locale>
 		</schema>
 	</schemalist>
