@@ -1,3 +1,8 @@
+2008-02-10  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* control-center.schemas.in: Add missing full stops in the long
+	description.
+
 2007-11-05  Scott Reeves <sreeves@novell.com>
 
 	* control-center.schemas.in: remove reference to background.desktop
